Simplify claims count response, fix bugs with filters
